# AliasForge

./: .gitignore  README.md  README_EN.md  README_TW.md  pyproject.toml
src/aliasforge/: __init__.py  cli.py  py.typed
src/aliasforge/commands/: __init__.py
src/aliasforge/core/: __init__.py  alias_manager.py  database.py  stats.py
src/aliasforge/utils/: __init__.py
tests/: test_aliasforge.py
