[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aliasforge"
version = "1.0.0"
description = "⚡ AliasForge - Lightweight Terminal Command Alias Intelligent Manager CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "gitstq", email = "gitstq@users.noreply.github.com"}
]
keywords = [
    "cli", "alias", "shell", "bash", "zsh", "fish", "terminal",
    "command", "productivity", "developer-tools", "zero-dependency"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
aliasforge = "aliasforge.cli:main"
af = "aliasforge.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/AliasForge"
Documentation = "https://github.com/gitstq/AliasForge#readme"
Repository = "https://github.com/gitstq/AliasForge"
Issues = "https://github.com/gitstq/AliasForge/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aliasforge = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/aliasforge"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
